frontend/user/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Montserrat&family=Shrikhand&display=swap');

.welcome-page{
  background: url(../Pictures/welcome.jpg) no-repeat fixed;
  position:relative;
  margin:0%;
}

.welcome-left{
  font-family: 'Montserrat', sans-serif;
  background-color: steelblue;
  width:50%;
  padding-top:2rem;
  padding-bottom:11.7rem;
}

.welcome-left h3{
  padding-left:5rem;
  color:white;
}

.welcome-left h1{
  font-family: 'Shrikhand', cursive;
  color:#172342;
  text-align: center;
}

.description{
  padding-left: 5rem;
  margin-top: 5rem;
  max-width: 630px;
  text-align:justify;
  color:#ccc;
}

.description h4{
  color:white;
  text-align: center;
  font-size:40px;
  font-family: "Alliance No.1",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight:bolder;
}

.selection{
  padding-top:8rem;
}

.welcome-page a{
  text-align: justify;
  font-size:25px;
  margin-left:8.5rem;
  margin-right:2rem;
  border:none;
  background-color: #FFB81C;
  border-radius: 25px;
  padding: 3rem 2rem;
  color:#172342;
  font-weight:bolder;
}

.welcome-page a:hover{
  background-color: #ffb71cb0;
}

.nav-topbar{
  background-color: steelblue;
  font-family: 'Shrikhand', cursive;
  font-size:3rem;
  padding-left:0.5em;
  padding-right:0.5em;
  position:fixed;
  width:100% !important;
  z-index:999;
}

.nav-topbar a{
  color:#172342 !important;
}

.nav-topbar a:hover{
  color:white !important;
}

.material-icons{
  vertical-align: middle;
}

.material-icons:hover{
  cursor: pointer;
}

.bloglist-interaction i:hover{
  background-color: lightgrey;
}

.logout{
  background-color: steelblue;
  font-family: 'Shrikhand', cursive;
  color:#172342 !important;
  border: 0;

  -webkit-text-size-adjust: 100%;
  font-weight: normal;
  -webkit-font-smoothing: antialiased;
  line-height: 64px;
  font-family: 'Shrikhand', cursive;
  list-style-type: none;
  box-sizing: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: transparent;
  text-decoration: none;
  color: #172342 !important;
  transition: background-color .3s;
  font-size: 1rem;
  display: block;
  padding: 0 15px;
  cursor: pointer;
}

.logout:hover{
  color:white !important;

  -webkit-text-size-adjust: 100%;
  font-weight: normal;
  -webkit-font-smoothing: antialiased;
  line-height: 64px;
  font-family: 'Shrikhand', cursive;
  list-style-type: none;
  box-sizing: inherit;
  -webkit-tap-highlight-color: transparent;
  text-decoration: none;
  transition: background-color .3s;
  font-size: 1rem;
  display: block;
  padding: 0 15px;
  cursor: pointer;
  color: white !important;
  background-color: rgba(0,0,0,0.1);
}

.myprofile-bar{
  display: flex;
  justify-content:space-between;
  width:110%;
  margin-top:2em;
}

.myprofile-bar a{
  color: black;
}

.myprofile-bar a:hover{
    color: steelblue !important
}

.profile-bar{
  display: flex;
  justify-content:space-between;
  width:110%;
  margin-top: -0.5em;
}

.profile-bar a{
  color: black;
}

.profile-bar a:hover{
    color: steelblue !important
}

.follow-button{
  margin-top:0.7em;
  width: 10em;
  padding-top:0.3em;
  padding-bottom: 0.3em;
  color:#172342;
  background-color: #FFB81C !important;
  border: none;
}

.follow-button:hover{
  background-color: darkgrey !important;
}

.following-button{
  margin-top:0.7em;
  width: 10em;
  padding-top:0.3em;
  padding-bottom: 0.3em;
  color:#172342;
  border: none;
  background-color:lightgrey !important

}
.following-button:hover{
  background-color: darkgrey !important;
}
.userinfo{
  font-family: 'Montserrat', sans-serif;
}

.gallery{
  text-align:center;
  display: grid;
  grid-template-columns: 30% 30% 30%;
  grid-template-rows: minmax(150px, auto);
  grid-gap: 1rem;
  justify-content: space-around;
  padding-bottom: 2rem;
}

.gallery > img{
    width: 100%;
}

.gallery-post-grid{
  position:relative;
  align-items: center;
  color: black;
}

.grid-background-color{
  position:relative;
  background: rgba(0,0,0, 0.03);
  width:100%;
  height:100%;
  padding-top: 5px;
}

.grid-background-color:hover{
  background: rgba(0,0,0, 0.1);
}

.cover-image{
  position:relative
}

.hidden-elements{
  position:absolute;
  opacity: 0;
  margin-top: 5%;
  margin-left: auto;
  margin-right: auto;
  top: 0;
  left: 0;
  right: 0;
}

.gallery-post-grid:hover .cover-image{
  opacity: 0.35;
}
.gallery-post-grid:hover .hidden-elements{
  visibility: visible;
  opacity: 1;
}
img.profile-name {
  object-fit: cover;
  border-radius: 50%;
  height: 2em;
  width: 2em;
  margin-right: 1rem;
  border: 1px solid lightgrey;
  position: relative;
  top: 10px
  
}

a.profile-username{
  color: black;
  position: relative;
  bottom: 5px;

}

a.profile-username:hover{
  color: steelblue
}

.slogan {
  background-color:#FFB81C;
  color:#172342;
  text-align:left;
  font-size:large;
  font-family: 'Gochi Hand', cursive;
  margin-top: -2.5rem;
  padding-left:1em;
  display:flex;
  max-height: 100px;
}

.post{
  width:30%;
}

.feed{
  max-width: 500px;
  height: max-content;
  margin: 26px auto;
  font-family: 'Montserrat', sans-serif;
}

.post-input{
  font-family: 'Montserrat', sans-serif;
  text-align: left;
  -webkit-text-size-adjust: 100%;
  font-size: 100%;
  font-weight: 400;
  line-height: 1.6;
  -webkit-font-smoothing: antialiased;
  box-sizing: inherit;
  margin: 1rem auto 0;
  width: 40rem;
  background-color:#fff;
  overflow: hidden;
  border-radius: 3px;
  max-width: 60rem;
  margin-right: auto;
  margin-left: auto;
  padding: 1rem 2.5rem;
}

.btn{
  font-family: 'Montserrat', sans-serif;
  border-radius: 0.5em;
  border:white;
  background-color: #ffb71cd6;
  color:#172342
}

.btn:hover{
  background-color: #ffb71c90;
}

.search-btn{
  color: #172342;
  background-color: steelblue;
  border: 0;
}

.search-btn:hover{
  color: white;

}
/* ... */

